Added answer add, update and vote commands
